fixed navbar and content, also added padding so navbar doesn't overflow text.

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,7 @@
     overflow: hidden;
     position: fixed;
     top: 0;
-    width: 75%;
+    width: 59%;
     
     
     
@@ -37,8 +37,9 @@ body {
 
 .content {
 	font-size: 20px;
-    width: 75%;
+    width: 80%;
     padding-bottom: 20px;
+    padding-top: 10px;
     background-color: white;
     height: 100%;
 }
